chrome/content/skin/common/smartTemplate-register.css
@import url('chrome://smarttemplate4/content/skin/common/license.css');
 
#smarttemplate-register {
  max-width: 850px !important;
}
label.ref {
  padding-top: 4px;
}
#email {
  min-width: 200px;
	width:auto;
}
#LicenseTerm {
  padding: 1em 1em;
}

@keyframes smartTemplatesRenew {
	0% { opacity: 0.7; }
	50% { opacity: 1; }
	100% { opacity: 0.7; }
}

#featureComparison {
  background-color: #fff229;
  padding: 4px 6px;
}

#LicenseTerm.expired {
	animation: smartTemplatesRenew 3s 5s ease-in-out infinite;
	background-color: #990038; /* dark purple */
	background-image: linear-gradient(to bottom, #bf376b 0%,#990038 51%,#700029 100%); 
	color: white !important;
}
.para, .heading {
	margin-left: 12px !important;
	margin-right: 12px !important;
}
table {
  display: table;
}
tr {
  display: table-row;
}
td {
  display: table-cell;
	-moz-box-align: start;
	-moz-box-orient: vertical;
	-moz-box-pack: justify;
  vertical-align: top;
}

#thePage, #buyBox {
  background-color: #ffffff;
	-moz-box-align: start;
	border: 1px solid rgba(88,88,88,0.4);
	margin: 1em;
}

#thePage {
	box-shadow: 2px 2px 4px rgba(80, 80, 80, 0.4);
}

#buyBox {
	box-shadow: inset 2px 2px 4px rgba(80, 80, 80, 0.4);
	background-image: linear-gradient(to right, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 100%);
	padding: 6px 10px 4px 0 !important;
}


/* main font - reflect in order  button */
.para {
  font-family: Cambria, Georgia, serif;
  font-size: 10.2pt;
	color: rgb(0, 0, 0);
}
.productcontainer {
  background-color: rgb(195,220,22);
	margin: 12px;
}
.product:before {
  content: url('chrome://smartTemplate4/content/skin/icon32x32.png'); 
  margin: 0.2em 0.2em 0 0;
  vertical-align: middle;
  display: inline-block; /* added 02.09.12 to center font in box */
}
.product {
  background-color: #405080; /* affects text color! */
  /*
  background: rgba(180,180,180,0.8);
  background: linear-gradient(to bottom, rgb(254, 204, 177) 0%, rgb(241, 116, 50) 50%, rgb(234, 85, 7) 51%, rgb(251, 149, 94) 100%); 
  border: 2px solid #eee !important; */
  border-radius: 2px;
  box-shadow: inset 0 0 2px 1px rgba(0,0,0,0.23);
  color: transparent;
  background-clip: text;
  text-shadow: 0px 1px 1px rgba(255,255,255,0.5);
  display: inline-block;
  font-family: calibri, arial, sans-serif;
  font-size: 27pt;
  font-weight: 900;
  height: auto;
  padding: 0.3em 0.4em 0.2em 0.3em;
  vertical-align: middle;
}
.para {
  margin: 0.5em 0;
	text-align: justify;
}
.link {
  cursor: pointer;
	text-decoration: underline;
}

#compLink {
  display: inline-block;
  color: rgb(160,0,0);
  font-weight: bold;
  text-decoration: underline;
}
#compLink:hover {
  color: rgb(200,0,0);
}

.heading {
  background: none;
  border: 1px solid rgba(140,140,140,0.4) !important;
	border-radius: 0px;
  box-shadow: inset 0px 0px 4px 1px rgba(160,160,160,0.2);
	color: rgb(60, 60, 60);
  display: inline-block;
  font-family: calibri, arial, sans-serif;
  font-size: 13pt;
  font-weight: 600;
  font-size: 1.2em;
	margin-top: 10px;
  padding: 0.4em 1em 0.4em 1em;
  text-shadow: 1px 1px 2px #FFF;
  vertical-align: middle;
	white-space: nowrap
}
.form {
	margin: 0 1em;
}

#referrer[collapsed=true] {
  display: none;
}

